{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 77,
  "lineage": "eff82bda-9fb3-8f0e-636e-3e6279f2993c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:loadbalancer/app/alt-alb/68f665d61745555a",
            "arn_suffix": "app/alt-alb/68f665d61745555a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alt-alb-1466342276.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:353225106521:loadbalancer/app/alt-alb/68f665d61745555a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alt-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c8903bda1798c057"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007b95bd9c2e3ac94"
              },
              {
                "subnet_id": "subnet-091a6bcbb656412f6"
              },
              {
                "subnet_id": "subnet-0ea518cb4e7b5fcce"
              }
            ],
            "subnets": [
              "subnet-007b95bd9c2e3ac94",
              "subnet-091a6bcbb656412f6",
              "subnet-0ea518cb4e7b5fcce"
            ],
            "vpc_id": "vpc-0392d7b09be1a0b31",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.terraform-1",
            "aws_instance.terraform-2",
            "aws_instance.terraform-3",
            "aws_security_group.alb_to_instances",
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet1",
            "aws_subnet.terraform-subnet2",
            "aws_subnet.terraform-subnet3",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:listener/app/alt-alb/68f665d61745555a/3ddc6270b5fed05b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353225106521:listener/app/alt-alb/68f665d61745555a/3ddc6270b5fed05b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:loadbalancer/app/alt-alb/68f665d61745555a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.target_group",
            "aws_instance.terraform-1",
            "aws_instance.terraform-2",
            "aws_instance.terraform-3",
            "aws_security_group.alb_to_instances",
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet1",
            "aws_subnet.terraform-subnet2",
            "aws_subnet.terraform-subnet3",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530",
            "arn_suffix": "targetgroup/target/4d7bdc8fbdcdb530",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "dependencies": [
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:353225106521:instance/i-0dd9bddfda59ee8c1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd9bddfda59ee8c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d70323b54d471004",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-54-211-124-7.compute-1.amazonaws.com",
            "public_ip": "54.211.124.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a89275e0eeb21f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a116ef0182ccb224"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091a6bcbb656412f6",
            "tags": {
              "Name": "terra-server-1"
            },
            "tags_all": {
              "Name": "terra-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a116ef0182ccb224"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:353225106521:instance/i-0d0b03debee15f428",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0b03debee15f428",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6ffaaece5bc884c",
            "private_dns": "ip-10-0-2-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "public_dns": "ec2-3-239-21-194.compute-1.amazonaws.com",
            "public_ip": "3.239.21.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a926d336d42302e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a116ef0182ccb224"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007b95bd9c2e3ac94",
            "tags": {
              "Name": "terra-server-2"
            },
            "tags_all": {
              "Name": "terra-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a116ef0182ccb224"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:353225106521:instance/i-0d97b66e21f9d3e8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d97b66e21f9d3e8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7754a88fc2ad730",
            "private_dns": "ip-10-0-3-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.154",
            "public_dns": "ec2-34-207-191-29.compute-1.amazonaws.com",
            "public_ip": "34.207.191.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d238c592e3e5175",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a116ef0182ccb224"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea518cb4e7b5fcce",
            "tags": {
              "Name": "terra-server-3"
            },
            "tags_all": {
              "Name": "terra-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a116ef0182ccb224"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alt-int-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:internet-gateway/igw-04f19bef2ad4c5667",
            "id": "igw-04f19bef2ad4c5667",
            "owner_id": "353225106521",
            "tags": {
              "Name": "alt-vpc-IGW"
            },
            "tags_all": {
              "Name": "alt-vpc-IGW"
            },
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "dependencies": [
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:listener-rule/app/alt-alb/68f665d61745555a/3ddc6270b5fed05b/f3234efa43f27682",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353225106521:listener-rule/app/alt-alb/68f665d61745555a/3ddc6270b5fed05b/f3234efa43f27682",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:listener/app/alt-alb/68f665d61745555a/3ddc6270b5fed05b",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_listener.listener",
            "aws_alb_target_group.target_group",
            "aws_instance.terraform-1",
            "aws_instance.terraform-2",
            "aws_instance.terraform-3",
            "aws_security_group.alb_to_instances",
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet1",
            "aws_subnet.terraform-subnet2",
            "aws_subnet.terraform-subnet3",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530-20230214191350213600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530",
            "target_id": "i-0d0b03debee15f428"
          },
          "dependencies": [
            "aws_alb_target_group.target_group",
            "aws_instance.terraform-2",
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Altschool-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530-20230214191340730400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353225106521:targetgroup/target/4d7bdc8fbdcdb530",
            "target_id": "i-0d97b66e21f9d3e8e"
          },
          "dependencies": [
            "aws_alb_target_group.target_group",
            "aws_instance.terraform-3",
            "aws_security_group.allow_web",
            "aws_subnet.terraform-subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Altschool-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:network-acl/acl-03edb816ec4d3a5d4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03edb816ec4d3a5d4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "353225106521",
            "subnet_ids": [
              "subnet-007b95bd9c2e3ac94",
              "subnet-091a6bcbb656412f6",
              "subnet-0ea518cb4e7b5fcce"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.terraform-subnet1",
            "aws_subnet.terraform-subnet2",
            "aws_subnet.terraform-subnet3",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alt-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:route-table/rtb-0876f16f61e9f1dfc",
            "id": "rtb-0876f16f61e9f1dfc",
            "owner_id": "353225106521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f19bef2ad4c5667",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alt-RT"
            },
            "tags_all": {
              "Name": "alt-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.alt-int-gateway",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altschool-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4da930aef0e1f3c",
            "route_table_id": "rtb-0876f16f61e9f1dfc",
            "subnet_id": "subnet-091a6bcbb656412f6"
          },
          "dependencies": [
            "aws_internet_gateway.alt-int-gateway",
            "aws_route_table.alt-route_table",
            "aws_subnet.terraform-subnet1",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altschool-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049604f6bd2cd8df5",
            "route_table_id": "rtb-0876f16f61e9f1dfc",
            "subnet_id": "subnet-007b95bd9c2e3ac94"
          },
          "dependencies": [
            "aws_internet_gateway.alt-int-gateway",
            "aws_route_table.alt-route_table",
            "aws_subnet.terraform-subnet2",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altschool-public-subnet3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fd833c33b38917f",
            "route_table_id": "rtb-0876f16f61e9f1dfc",
            "subnet_id": "subnet-0ea518cb4e7b5fcce"
          },
          "dependencies": [
            "aws_internet_gateway.alt-int-gateway",
            "aws_route_table.alt-route_table",
            "aws_subnet.terraform-subnet3",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_to_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:security-group/sg-0c8903bda1798c057",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c8903bda1798c057",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "353225106521",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:security-group/sg-0a116ef0182ccb224",
            "description": "allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c8903bda1798c057"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a116ef0182ccb224",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8903bda1798c057"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH",
            "name_prefix": "",
            "owner_id": "353225106521",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow web"
            },
            "tags_all": {
              "Name": "allow web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_to_instances",
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:subnet/subnet-091a6bcbb656412f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091a6bcbb656412f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353225106521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-subnet1"
            },
            "tags_all": {
              "Name": "terra-public-subnet1"
            },
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "dependencies": [
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:subnet/subnet-007b95bd9c2e3ac94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007b95bd9c2e3ac94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353225106521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-subnet2"
            },
            "tags_all": {
              "Name": "terra-public-subnet2"
            },
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "dependencies": [
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:subnet/subnet-0ea518cb4e7b5fcce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea518cb4e7b5fcce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353225106521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-subnet3"
            },
            "tags_all": {
              "Name": "terra-public-subnet3"
            },
            "vpc_id": "vpc-0392d7b09be1a0b31"
          },
          "dependencies": [
            "aws_vpc.alt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alt-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353225106521:vpc/vpc-0392d7b09be1a0b31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0aeb5bd45ed4e74",
            "default_route_table_id": "rtb-0139fe84136600de2",
            "default_security_group_id": "sg-06c7a8dbb102ab3a8",
            "dhcp_options_id": "dopt-01ee53f7f47a36462",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0392d7b09be1a0b31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0139fe84136600de2",
            "owner_id": "353225106521",
            "tags": {
              "Name": "alt-vpc"
            },
            "tags_all": {
              "Name": "alt-vpc"
            }
          }
        }
      ]
    }
  ]
}